# pydiskcmd

./: .gitignore  DEVELOPMENT.md  Install  README.md  changelog.txt  raid_support_matrix_with_smartie.txt  setup.cfg  setup.py
examples/: ata_cmd_DiskRead.py  ata_cmd_DiskWrite.py  ata_cmd_check_power_mode.py  ata_cmd_execute_device_diagnostic.py  ata_cmd_flush.py  ata_cmd_get_accessible_max_address.py  ata_cmd_identify.py  ata_cmd_self-test-offline.py  ata_cmd_smart.py  ata_cmd_standby_imm.py  ata_cmd_trim.py  ata_cmd_trimall.py  inquiry.py  nvme_cmd_error_log_entry.py  nvme_cmd_fw_slot_info.py  nvme_cmd_fw_update.py  nvme_cmd_get_pm.py  nvme_cmd_id_ctrl.py  nvme_cmd_id_ns.py  nvme_cmd_smart_log.py  read16.py  read16_with_contextmanger.py  readcapacity10.py  readcapacity16.py  reportluns.py  reportpriority.py  win_scan_device.py
examples/config/: readme.txt  vs_smart_drivedb_template.json
pydiskcmd/: __init__.py  __version__.py  exceptions.py
pydiskcmd/common/: Lin_device.py  __init__.py  device.py  win_device.py
pydiskcmd/plugins/: __init__.py
pydiskcmd/pydiskhealthd/: DB.py  all_device.py  default_config.py  disk_health_calculation.py  linux_nvme_aer.py  log.py  nvme_aer.py  nvme_device.py  nvme_smart.py  sata_device.py  sata_smart.py  scsi_device.py  some_path.py
pydiskcmd/pydiskhistory/: disk_information.py  disk_smart_history.py  disk_trace.py  matplotlib_plot.py
pydiskcmd/pynvme/: __init__.py  (+30 more)
scripts/: ata_cmd_DiskRead.py  ata_cmd_DiskWrite.py  ata_cmd_execute_device_diagnostic.py  ata_cmd_flush.py  ata_cmd_get_accessible_max_address.py  ata_cmd_identify.py  ata_cmd_self-test-offline.py  ata_cmd_standby_imm.py  ata_cmd_trim.py  nvme_cmd_error_log_entry.py  nvme_cmd_fw_slot_info.py  nvme_cmd_fw_update.py  nvme_cmd_get_pm.py  nvme_cmd_id_ctrl.py  nvme_cmd_id_ns.py  nvme_cmd_smart_log.py
src/: README.md
tests/: mock_device.py  test_cdb_exchangemedium.py  test_cdb_getlbastatus.py  test_cdb_initelementstatus.py  test_cdb_initelementstatuswithrange.py  test_cdb_inquiry.py  test_cdb_modesense10.py  test_cdb_modesense6.py  test_cdb_movemedium.py  test_cdb_openclose_exportimport_element.py  test_cdb_positiontoelement.py  test_cdb_preventallow_mediumremoval.py  test_cdb_read10.py  test_cdb_read12.py  test_cdb_read16.py  test_cdb_readcapacity10.py  test_cdb_readcapacity16.py  test_cdb_readelementstatus.py  test_cdb_reportpriority.py  test_cdb_testunitready.py  test_cdb_write10.py  test_cdb_write12.py  test_cdb_write16.py  test_cdb_writesame10.py  test_cdb_writesame16.py  test_enum.py  test_opcode_mapper.py  test_persistent_event_log.py  test_unmarshall_getlbastatus.py  test_unmarshall_inquiry.py  test_unmarshall_modesense10.py  test_unmarshall_modesense6.py  test_unmarshall_readcapacity10.py  test_unmarshall_readcapacity16.py  test_unmarshall_readelementstatus.py
tools/: WAFTool.py  getlbastatus.py  inquiry.py  mtx.py  swp.py
(+324 files in other folders)
