# SPDX-FileCopyrightText: 2014 The python-scsi Authors
# SPDX-FileCopyrightText: 2021 The pydiskcmd Authors
#
# SPDX-License-Identifier: LGPL-2.1-or-later

[metadata]
name = PYDISKCMD
version = 0.2.1
description = Python Interface to send command to sata,sas,nvme disk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jackeichen/pydiskcmd
maintainer = Eric
maintainer_email = gaozh3@lenovo.com
license = LGPL-2.1
license_file = LICENSE
license_files =
    LICENSES/*
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    diskcmd

[options]
packages = find:
python_requires = ~= 3.6

[options.entry_points]
console_scripts =
    pydiskcmd = pydiskcmd.scripts.pydiskcmd:pydiskcmd
    pynvme = pydiskcmd.scripts.pynvme:pynvme
    pysata = pydiskcmd.scripts.pysata:pysata
    pydiskhealthd = pydiskcmd.scripts.pydiskhealthd:pydiskhealthd

[options.extras_require]
dev =
    isort
    mypy
    pre-commit
    pytest
    pytest-mypy
    setuptools>=42
    setuptools_scm[toml]>=3.4
    wheel
iscsi =
    cython-iscsi
sgio =
    cython-sgio>=1.1.2

[options.packages.find]
exclude =
    tests

[options.package_data]
pydiskcmd =
    system/bash-pydiskcmd-completion.sh
    system/pydiskhealthd.service
    system/pydiskhealthd.cfg
