# SPDX-FileCopyrightText: 2022 The pydiskcmd Authors
#
# SPDX-License-Identifier: LGPL-2.1-or-later

[metadata]
name = PYDISKCMD
version = 0.3.4
description = Python Interface to send command to sata,sas,nvme disk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jackeichen/pydiskcmd
maintainer = Eric
maintainer_email = Eric-1128@outlook.com
license = LGPL-2.1
license_file = LICENSE
license_files =
    LICENSES/*
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    diskcmd

[options]
packages = find:
package_dir =
    =src
python_requires = ~= 3.6
install_requires =
    Cython

[options.entry_points]
console_scripts =
    pynvme = pydiskcmdcli.scripts.pynvme:pynvme
    pysata = pydiskcmdcli.scripts.pysata:pysata
    pyscsi = pydiskcmdcli.scripts.pyscsi:pyscsi

[options.extras_require]
dev =
    isort
    mypy
    pre-commit
    pytest
    pytest-mypy
    setuptools>=42
    setuptools_scm[toml]>=3.4
    wheel

[options.packages.find]
where = src
include = py*
exclude =
    tests
